infra/temporal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal
  namespace: temporal
spec:
  type: ClusterIP
  selector:
    app: temporal
  ports:
    - name: frontend
      port: 7233
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: temporal-web
  namespace: temporal
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: temporal-web
  ports:
    - name: http
      port: 7234
      protocol: TCP
      targetPort: 8080
